--- a/mainApp/package.json
+++ b/mainApp/package.json
@@ -56,9 +56,12 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.5",
     "react-query": "^2.26.3",
+    "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
