--- a/mainApp/package.json
+++ b/mainApp/package.json
@@ -8,6 +8,7 @@
     "@hookform/resolvers": "^1.1.1",
     "@material-ui/core": "^4.11.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/user-event": "^12.2.0",
@@ -39,6 +40,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "immer": "^8.0.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
@@ -56,9 +58,12 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.5",
     "react-query": "^2.26.3",
+    "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
